# pdf-ruiner

./: Cargo.toml  README.md  convert_fill_to_stroke.py  pdf_optical_compare.py  pyproject.toml  ruin.py
src/: main.rs  ruin.rs  strategy.rs
src/util/: is_rectangle.rs  list_files.rs  mod.rs  optical_compare.rs
