[package]
name = "pdf-ruiner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "PdfRuin"
path = "src/main.rs"

[dependencies]
image = "0.25.9"
imageproc = "0.25.0"
pdfium-render = "0.8.37"
ndarray = { version = "0.17.1", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
bitflags = "2.10.0"
